--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ body {
 .input-boxes input {
     position: absolute;
     font-family: Arial, sans-serif;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     border-radius: 4px;
     box-sizing: border-box;
 }
@@ -212,5 +212,14 @@ body {
 #mill-boxes textarea:nth-child(16) { top: 1%; left: 87%; } /* lafarge lake */ 
 
 
-
+#expo-boxes input:nth-child(12)::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -15px; /* Adjust the positioning as needed */
+    transform: translateY(-50%);
+    border: solid transparent;
+    border-width: 5px;
+    border-right-color: black; /* Arrow color */
+  }
 
